# wless

./: .clang-format  .clangd  .gitignore  LOG.md  Makefile  README.md  action.c  action.h  client.c  client.h  input.c  input.h  ipc.c  ipc.h  main.c  meson.build  output.c  output.h  server.h  wless.c  wless.h  wlessrc
protocol/: meson.build
protocols/: meson.build
scripts/: format.sh
tests/: Makefile  clear.c
tools/: Makefile  README.md  resize.c
